# dota2minicheat

./: CMakeLists.txt
.github/workflows/: main.yml
injector/: main.cpp
src/: config.cpp  config.h  dllmain.cpp  globals.h
src/features/: auto_accept.cpp  auto_accept.h  awareness.cpp  awareness.h  camera_hack.cpp  camera_hack.h  esp.cpp  esp.h  feature_manager.cpp  feature_manager.h
src/hooks/: hooks.cpp  hooks.h  input_hook.h
src/render/: menu.cpp  menu.h  renderer.cpp  renderer.h  style.h
src/sdk/: interfaces.cpp  interfaces.h  offsets.h  source2sdk.h
src/utils/: logger.h  math.h  memory.cpp  memory.h  pattern_scan.h
